Update vj testcases v2